# datagears

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
datagears/: __init__.py
datagears/engine/: analysis.py  api.py  constants.py  dependencies.py  engine.py  network.py  nodes.py  plot.py  run.py
docs/: conf.py  index.rst  installation.rst  usage.rst
test/: __init__.py  test_analysis.py  test_datagears.py  test_engine.py  test_network.py
